<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/lavender"
    tools:context=".activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/loginCardView_layoutMargin"
        app:cardCornerRadius="@dimen/loginCardView_cardCornerRadius"
        app:cardElevation="@dimen/loginCardView_cardElevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/loginPadding"
            android:background="@drawable/borders">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/loginTvTitleSize"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginEt_layoutHeight"
                android:background="@drawable/borders"
                android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="@dimen/loginEt_drawablePadding"
                android:hint="@string/etLoginEmail"
                android:textColor="@color/grey"
                android:inputType="textEmailAddress"
                android:padding="@dimen/loginEt_padding"/>

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginEt_layoutHeight"
                android:background="@drawable/borders"
                android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="@dimen/loginEt_drawablePadding"
                android:hint="@string/etLoginPassword"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="@dimen/loginEt_padding"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginBtn_layoutHeight"
                android:layout_marginTop="@dimen/loginBtn_layoutMarginTop"
                app:cornerRadius = "@dimen/loginBtn_cornerRadius"
                android:text="@string/btnSignIn"
                android:textSize="@dimen/loginBtn_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chkRemember"
                    android:textColor="@color/lavender"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tvForgotPassword"
                    android:textColor="@color/lavender"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvSignUpRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginTvSignUp_layoutMarginTop"
                android:text="@string/tvSignUpRedirect"
                android:textSize="@dimen/loginTvSignUp_textSize"
                android:textColor="@color/lavender"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="@dimen/loginTvSignUp_padding" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>