<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/lavender"
    tools:context=".activity.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/loginCardView_layoutMargin"
        app:cardCornerRadius="@dimen/loginCardView_cardCornerRadius"
        app:cardElevation="@dimen/loginCardView_cardElevation">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/loginPadding"
                android:background="@drawable/borders">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTitleSignUpActivity"
                    android:textSize="@dimen/loginTvTitleSize"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"/>

                <EditText
                    android:id="@+id/etSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="@dimen/loginEt_drawablePadding"
                    android:hint="@string/etSignUpEmail"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding"/>

                <EditText
                    android:id="@+id/etSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/loginEt_drawablePadding"
                    android:hint="@string/etSignUpPassword"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding"/>

                <EditText
                    android:id="@+id/etSignUpName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="@dimen/loginEt_drawablePadding"
                    android:hint="@string/etSignUpName"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/loginEt_drawablePadding"
                        android:hint="@string/tvBirthYear"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/baseline_calendar_month_24" />

                    <Spinner
                        android:id="@+id/spBirthYear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/etSignUpTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:drawableStart="@drawable/baseline_smartphone_24"
                    android:drawablePadding="@dimen/loginEt_drawablePadding"
                    android:hint="@string/etSignUpTelephone"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding"/>

                <EditText
                    android:id="@+id/etSignUpCard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginEt_layoutHeight"
                    android:layout_marginTop="@dimen/loginEt_layoutMarginTop"
                    android:drawableStart="@drawable/baseline_credit_card_24"
                    android:drawablePadding="@dimen/loginEt_drawablePadding"
                    android:hint="@string/etSignUpCard"
                    android:textColor="@color/black"
                    android:background="@drawable/borders"
                    android:padding="@dimen/loginEt_padding"/>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginBtn_layoutHeight"
                    android:layout_marginTop="@dimen/loginBtn_layoutMarginTop"
                    app:cornerRadius = "@dimen/loginBtn_cornerRadius"
                    android:text="@string/btnSignUp"
                    android:textSize="@dimen/loginBtn_textSize" />

                <TextView
                    android:id="@+id/tvLoginRedirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginTvSignUp_layoutMarginTop"
                    android:text="@string/tvLoginRedirectFromSignUp"
                    android:textSize="@dimen/loginTvSignUp_textSize"
                    android:textColor="@color/lavender"
                    android:textStyle="bold"
                    android:padding="@dimen/loginTvSignUp_padding"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>
